# q2-gglasso

./: .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  denoising_stats.qzv  main.py  pyproject.toml  pytest.ini  q2-gglasso.yml  q2_gglasso.dockerfile  requirements.txt  setup.cfg  setup.py  tips and tricks.ipynb  versioneer.py
.github/workflows/: ci.yml
ci/recipe/: meta.yaml
data/: atacama-counts.qza  classification.qza  selected-atacama-sample-metadata.tsv  test_solution.qza
environment-files/: docker-compose.yml  q2-gglasso-2025.4.yml  q2-gglasso-qiime2-amplicon-2025.4.yml  q2-gglasso.yml
example/88soil/: soil_example.ipynb
example/atacama/: .gitignore  atacama_example.ipynb  tutorial_optimized.py
example/data/: tutorial.py
example/data/atacama/: atacama_example.ipynb  atacama_example.py
example/data/test_soil/: tutorial.ipynb
q2_gglasso/: __init__.py  _dict.py  _format.py  _func.py  _plot.py  _transformer.py  _type.py  _version.py  plugin_setup.py  utils.py
q2_gglasso/_heatmap/: __init__.py  _visualizer.py
q2_gglasso/_heatmap/assets/: index.html
q2_gglasso/_pca/: __init__.py  _visualizer.py
q2_gglasso/_pca/assets/: index.html
q2_gglasso/_summarize/: __init__.py  _visualizer.py
q2_gglasso/_summarize/assets/: index.html
q2_gglasso/tests/: __init__.py  test_correlation.py  test_covariance.py  test_groups.py  test_heatmap.py  test_plugin_setup.py  test_problem.py  test_transformation.py  test_type.py  test_utils.py  test_zarr.py
