[build-system]
requires = ["setuptools>=42", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "q2-gglasso"
version = "0.0.0"  # versioneer will dynamically set this from git tags
description = "QIIME 2 plugin for General Graphical Lasso problems"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Oleg Vlasovets", email = "oleg.vlasovets@helmholtz-munich.de"},
    {name = "Christian L. Müller"},
    {name = "Fabian Schaipp"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "gglasso<=0.2.1",
    "numpy<=1.26",
    "numba>=0.56",
    "scikit-learn>=0.24.1",
    "scipy>=0.11.0",
    "bokeh>=2.4.2",
    "jupyterlab>=3.0.0",
    "setuptools>=59.8.0",
    "zarr>=2.11.1",
    "pytest>=7.0.1",
    "jinja2",
    "pandas",
    "biom-format",
    "versioneer",
]

[project.urls]
Homepage = "https://github.com/Vlasovets/q2-gglasso"
Repository = "https://github.com/Vlasovets/q2-gglasso.git"

[tool.setuptools]
packages = ["q2_gglasso"]
package-data = {q2_gglasso = ["citations.bib"]}

[project.entry-points."qiime2.plugins"]
gglasso = "q2_gglasso.plugin_setup:plugin"

[tool.setuptools.dynamic]
version = {file = "q2_gglasso/_version.py"}

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "q2_gglasso/_version.py"
versionfile_build = "q2_gglasso/_version.py"
tag_prefix = ""
parentdir_prefix = ""

[tool.black]
line-length = 80
